--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     </button>
                     <a class="navbar-brand" href="#">
                         <span class="glyphicon glyphicon-fire" aria-hidden="true"></span>
-                        <strong>Sparky</strong>
+                        <strong>portfolioSparky</strong>
                     </a>
                 </div>
                 <div class="collapse navbar-collapse header-collapse">
